--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
     "version": 2,
-    "name": "scrapping-gold",
+    "name": "notes-app",
     "builds": [
-       { "src": "./src/server.js", "use": "@vercel/node" }
+       { "src": "src/server.js", "use": "@vercel/node" }
     ],
     "routes": [
-       { "src": "/(.*)", "dest": "./src/server.js" }
+       { "src": "/(.*)", "dest": "src/server.js" }
     ]
  }
