--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
     ],
     "headers": [
       {
-        "source": "/notes/(.*)",
+        "source": "/(.*)",
         "headers": [
           { "key": "Access-Control-Allow-Credentials", "value": "true" },
           { "key": "Access-Control-Allow-Origin", "value": "*" },
